--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,79 @@
-add docker code here 
+version: '3.8'
+services:
+  zookeeper:
+    image: bitnami/zookeeper:3
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: bitnami/kafka:latest
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+
+  mongo:
+    image: mongo:6
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+  passenger:
+    build: ./passenger-service
+    depends_on:
+      - mongo
+      - kafka
+    ports:
+      - "8081:8081"
+
+  transport:
+    build: ./transport-service
+    depends_on:
+      - mongo
+      - kafka
+    ports:
+      - "8082:8082"
+
+  ticketing:
+    build: ./ticketing-service
+    depends_on:
+      - mongo
+      - kafka
+    ports:
+      - "8083:8083"
+
+  payment:
+    build: ./payment-service
+    depends_on:
+      - kafka
+    ports:
+      - "8084:8084"
+
+  notification:
+    build: ./notification-service
+    depends_on:
+      - mongo
+      - kafka
+    ports:
+      - "8086:8086"
+
+  admin:
+    build: ./admin-service
+    depends_on:
+      - mongo
+      - kafka
+    ports:
+      - "8085:8085"
+
+volumes:
+  mongo-data:
